# AI_desktop

./: .coverage  .gitignore  AGENTS.md  PROMPT.md  README.md  pyproject.toml
benchmarks/: README.md  latency_bench.py
docker/: Dockerfile
docs/: SETUP_CHECKLIST.md  architecture.md  lessons.md  progress.md
docs/prd/: 001-local-gpu-pc-control.md
docs/reports/: module-compatibility-2026.html  vlm-model-selection-2026.html
docs/spec/: model-deployment.md  perception-pipeline.md  safety-layer.md
docs/tasks/active/: T-01-gpu-setup.md  T-02-download-models.md  T-03-quantization.md  T-04-vlm-server.md  T-05-screenshot.md  T-06-yolo-detector.md  T-07-ocr.md  T-08-som.md  T-09-ooda-loop.md  T-10-planner.md  T-11-memory.md  T-12-mouse-keyboard.md  T-13-windows-ctrl.md  T-14-risk-evaluator.md  T-15-human-approval.md  T-16-audit-log.md  T-17-budget.md  T-18-api.md  T-19-e2e-tests.md  T-20-benchmark-tests.md
docs/tasks/cancelled/: T-06-yolo-detector.md  T-07-ocr.md  T-08-som.md
docs/tasks/completed/: T-01-gpu-setup.md
docs/theory/: long-run-protocol.md  multi-agent-collaboration.md  multi-agent-practical-guide.md
scripts/: download_models.py  setup_gpu.py  validate.py
src/inference/: __init__.py  action_schema.py  cli.py  context_manager.py  gpu_monitor.py  model_manager.py  router.py  vlm_server.py
src/observability/: __init__.py  trace_logger.py
tests/: test_gpu_setup.py
