[project]
name = "ai-pc-control"
version = "0.1.0"
description = "Local-GPU AI PC Control System"
requires-python = ">=3.11"

dependencies = [
    # AI 推理（核心）
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    # 图像处理
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    # 执行层
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "playwright>=1.48.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # 工具
    "pydantic>=2.9.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
# 可选插件（UI-TARS 内置感知能力后不再作为主流程必需）
plugins = [
    "ultralytics>=8.3.0",     # YOLO11m 检测插件
    "paddleocr>=2.7.0",       # PaddleOCR 文字识别 fallback
    "paddlepaddle-gpu>=2.6.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
